welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (nbpas <- 0 to 6){
   if (estSurBiscuit()){
  	prendBiscuit()
   if (!estSurBiscuit()){
   	avancer()
   }
}